--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,14 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', Arial;
 }
 
+body ,html {
+  background: linear-gradient(0deg, rgba(255,255,255,1) 50%, rgba(255,0,0,1) 50%);
+  background-repeat: no-repeat;
+
+  height: 100%;
+  width: 100%;
+
+}
