--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokédex</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="icon" type="imagem/png" href="/img/pokeball.png">
 </head>
 
 <body>
+  
 
 </body>
 
