--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,48 @@
 </head>
 
 <body>
+  <header>
+    <div id="titulo">
+      <img src="/img/pokebola.png" alt="Pokebola">
+      <h1>Pokédex</h1>
+    </div>
+  </header>
   
+  <main>
+    <section id="main-section">
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Cadastrar</li>
+          <li>Home</li>
+        </ul>
+      </nav>
+  
+      <section id="content">
+        <section class="cards">
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="">
+          <h2>Bulbasaur</h2>
+          <p class="tipo">Grass</p>
+        </section>
+        <section class="cards">
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="">
+          <h2>Bulbasaur</h2>
+          <p class="tipo">Grass</p>
+        </section>
+        <section class="cards">
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="">
+          <h2>Bulbasaur</h2>
+          <p class="tipo">
+            <button>Grass</button>
+          </p>
+        </section>
+      </section>
+  
+  
+    </section>
+  
+  </main>
 
 </body>
-
 
 </html>
