--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,30 +29,26 @@
       </nav>
   
       <section id="content">
-        <section class="cards">
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="">
-          <h2>Bulbasaur</h2>
-          <p class="tipo">Grass</p>
-        </section>
-        <section class="cards">
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="">
-          <h2>Bulbasaur</h2>
-          <p class="tipo">Grass</p>
-        </section>
-        <section class="cards">
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="">
-          <h2>Bulbasaur</h2>
-          <p class="tipo">
-            <button>Grass</button>
-          </p>
-        </section>
+        <% pokedex.forEach((pokemon)=> { %>
+        
+          <div class="cards">
+            <img src="<%= pokemon.imagem %>" alt="Imagem do Pokemon">
+            <h2>
+              <%= pokemon.nome %>
+            </h2>
+            <p class="tipo">
+              <%= pokemon.tipo%>
+                </p>
+          </div>
+          
+          <% })%>
       </section>
   
   
     </section>
   
   </main>
-
+  
 </body>
 
 </html>
