--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,34 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pokédex</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="icon" type="imagem/png" href="/img/pokeball.png">
-</head>
-
-<body>
-  <header>
-    <div id="titulo">
-      <img src="/img/pokebola.png" alt="Pokebola">
-      <h1>Pokédex</h1>
-    </div>
-  </header>
-  
-  <main>
-    <section id="main-section">
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>Cadastrar</li>
-          <li>Home</li>
-        </ul>
-      </nav>
-  
-      <section id="content">
+<%- include('header.ejs') %>
         <% pokedex.forEach((pokemon)=> { %>
         
           <div class="cards">
@@ -42,13 +12,4 @@
           </div>
           
           <% })%>
-      </section>
-  
-  
-    </section>
-  
-  </main>
-  
-</body>
-
-</html>
+<%- include('footer.ejs') %>
