--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,8 +14,8 @@
 html {
   background: linear-gradient(0deg, rgba(255,255,255,1) 50%, rgba(255,0,0,1) 50%);
   background-repeat: no-repeat;
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; */
   display: flex;
   justify-content: center;
 
@@ -110,5 +110,42 @@ section#content div.cards img{
 }
 
 section#content div.cards h2, .tipo{
+  margin-bottom: 1rem;
+}
+
+section#cadastro{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 1rem;
+  flex-wrap: wrap;
+}
+
+section#cadastro h2{
+  width: 100%;
+  text-align: center;
+  padding-bottom: 2rem;
+  font-size: 2rem;
+}
+
+section#cadastro form{
+  width: 70%;
+  align-self: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+section#cadastro form input{
+  width: 100%;
+  padding: .7rem;
+  font-size: 1rem;
+  outline: none;
+  border: 2px solid rgb(189, 189, 189);
+  margin-bottom: 1rem;
+}
+
+section#cadastro form label{
+  color:rgb(63, 63, 63);
+  width: 100%;
   margin-bottom: 1rem;
 }
