--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,18 +1,33 @@
 <%- include('header.ejs') %>
-  <section>
-    <h1>Cadastre um novo Pokemon</h1>
+  <section id="cadastro">
+    <h2>Cadastre um novo Pokemon</h2>
     <form action="">
+      <label for="numero">Número</label>
+      <input type="text" id="numero" name="numero">
+
       <label for="nome">Nome</label>
       <input type="text" id="nome" name="nome">
-
-      <label for="descricao">Descrição</label>
-      <input type="text" id="descricao" name="descricao">
 
       <label for="tipo">Tipo</label>
       <input type="text" id="tipo" name="tipo">
 
       <label for="imagem">Link da imagem</label>
       <input type="text" id="imagem" name="imagem">
+
+      <label for="descricao">Descrição</label>
+      <input type="text" id="descricao" name="descricao">
+      
+      <label for="altura">Altura</label>
+      <input type="text" id="altura" name="altura">
+      
+      <label for="peso">Peso</label>
+      <input type="text" id="peso" name="peso">
+      
+      <label for="categoria">Categoria</label>
+      <input type="text" id="categoria" name="categoria">
+      
+      <label for="habilidade">Habilidade</label>
+      <input type="text" id="habilidade" name="habilidade">
 
       <button id="btnCadastrar" type="submit">Cadastrar</button>
 
