--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,33 +1,33 @@
 <%- include('header.ejs') %>
   <section id="cadastro">
     <h2>Cadastre um novo Pokemon</h2>
-    <form action="">
+    <form action="/add" method="POST">
       <label for="numero">Número</label>
-      <input type="text" id="numero" name="numero">
+      <input type="text" id="numero" name="numero" required>
 
       <label for="nome">Nome</label>
-      <input type="text" id="nome" name="nome">
+      <input type="text" id="nome" name="nome" required>
 
       <label for="tipo">Tipo</label>
-      <input type="text" id="tipo" name="tipo">
+      <input type="text" id="tipo" name="tipo" required>
 
       <label for="imagem">Link da imagem</label>
-      <input type="text" id="imagem" name="imagem">
+      <input type="text" id="imagem" name="imagem" required>
 
       <label for="descricao">Descrição</label>
-      <input type="text" id="descricao" name="descricao">
+      <input type="text" id="descricao" name="descricao" required>
       
       <label for="altura">Altura</label>
-      <input type="text" id="altura" name="altura">
+      <input type="text" id="altura" name="altura" required>
       
       <label for="peso">Peso</label>
-      <input type="text" id="peso" name="peso">
+      <input type="text" id="peso" name="peso" required>
       
       <label for="categoria">Categoria</label>
-      <input type="text" id="categoria" name="categoria">
+      <input type="text" id="categoria" name="categoria" required>
       
       <label for="habilidade">Habilidade</label>
-      <input type="text" id="habilidade" name="habilidade">
+      <input type="text" id="habilidade" name="habilidade" required>
 
       <button id="btnCadastrar" type="submit">Cadastrar</button>
 
