--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@ html {
 }
 
 body{
-  width: 90%;
+  width: 80%;
   height: 100%;
   
 }
@@ -93,6 +93,7 @@ section#main-section nav ul li a{
 section#content{
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   margin-top: 1rem;
   padding-bottom: 1.3rem;
   
@@ -100,9 +101,10 @@ section#content{
 }
 
 section#content div.cards{
-  width: 20rem;
+  width: 15rem;
   box-shadow: 5px 5px 5px 5px #00000015;
   padding: 1rem;
+  margin-top: 2rem;
 }
 
 section#content div.cards img{
@@ -148,4 +150,23 @@ section#cadastro form label{
   color:rgb(63, 63, 63);
   width: 100%;
   margin-bottom: 1rem;
+}
+
+section#cadastro form button{
+  padding: .6rem;
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  font-size: 1rem;
+  background-color: white;
+  border: solid 1px red;
+  color: red;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+}
+
+section#cadastro form button:hover{
+  background-color: red;
+  color: white;
 }
