--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,20 @@
         <% pokedex.forEach((pokemon)=> { %>
         
           <div class="cards">
+            <a href="/detalhes/<%= pokemon.id %>">
             <img src="<%= pokemon.imagem %>" alt="Imagem do Pokemon">
+            <p id="numero">#
+              <%= pokemon.numero %>
+            </p>
             <h2>
               <%= pokemon.nome %>
             </h2>
             <p class="tipo">
-              <%= pokemon.tipo%>
-                </p>
+              <span>
+                <%= pokemon.tipo %>
+              </span>
+              </p>
+            </a>
           </div>
           
           <% })%>
