--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -7,6 +7,10 @@
         <span> #<%= pokemon.numero %>
         </span>
     </h2>
+    <p id="detipo">
+      <%= pokemon.tipo %>
+    </p>
+
     <div id="desc">
 
       <img src="<%= pokemon.imagem %>" alt="Imagem do Pokemon">
