--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,7 +206,16 @@ section#detalhes{
 section#detalhes h2{
   align-self: center;
   font-size: 2rem;
+  margin-bottom: .3rem;
+}
+
+section#detalhes p#detipo{
+  align-self: center;
   margin-bottom: 3rem;
+  background-color: #54b564;
+  padding: .3rem;
+  font-size: 1rem;
+  
 }
 
 section#detalhes div#desc{
@@ -224,7 +233,6 @@ section#detalhes div#desc img{
 
 section#detalhes div#desc div#box{
   width: 35%;
-  align-self: center;
   text-align: center;
 }
 
