--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -1,4 +1,4 @@
-<%- include('header.ejs') %>
+<%- include('partials/header.ejs') %>
 
   <section id="detalhes">
 
@@ -48,4 +48,4 @@
 
   </section>
 
-<%- include('footer.ejs') %>
+<%- include('partials/footer.ejs') %>
