--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('header.ejs') %>
+<%- include('partials/header.ejs') %>
         <% pokedex.forEach((pokemon)=> { %>
         
           <div class="cards">
@@ -19,4 +19,4 @@
           </div>
           
           <% })%>
-<%- include('footer.ejs') %>
+<%- include('partials/footer.ejs') %>
