--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,4 +1,4 @@
-<%- include('header.ejs') %>
+<%- include('partials/header.ejs') %>
   <section id="cadastro">
     <h2>Cadastre um novo Pokemon</h2>
     <form action="/add" method="POST">
@@ -33,4 +33,4 @@
 
     </form>
   </section>
-  <%- include('footer.ejs') %>
+  <%- include('partials/footer.ejs') %>
