--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -2,46 +2,44 @@
 
   <section id="detalhes">
 
-    <h2>
-      <%= pokemon.nome %>
-        <span> #<%= pokemon.numero %>
-        </span>
-    </h2>
+    <h2>Ivysaur #2</h2>
     <p id="detipo">
-      <%= pokemon.tipo %>
+      Grass
     </p>
+    <div id="desc-content">
 
-    <div id="desc">
+      <div id="desc-img">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/002.png" alt="Imagem do Pokemon">
+      </div>
 
-      <img src="<%= pokemon.imagem %>" alt="Imagem do Pokemon">
-      <div id="box">
+      <div id="desc-box">
         <p>
-          <%= pokemon.descricao %>
+          When the bulb on its back grows large, it appears to lose the ability to stand on its hind legs.
         </p>
         <div id="atributos">
-        
+      
           <h3>Altura</h3>
           <p>
-            <%= pokemon.altura %>
+            7' 30"
           </p>
 
           <h3>Peso</h3>
           <p>
-            <%= pokemon.peso %>
+            17.5 lbs
           </p>
 
           <h3>Categoria</h3>
           <p>
-            <%= pokemon.categoria %>
+            Lizard
           </p>
 
           <h3>Habilidade</h3>
           <p>
-            <%= pokemon.habilidade %>
+            Blaze
           </p>
 
         </div>
-
+  
       </div>
 
     </div>
