--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,6 +4,12 @@
 
 </main>
 
+<footer>
+  <p>Todos os direitos reservados para <a target="_blank" href="https://github.com/jeffersonluiz27/">Jefferson Silva</a>
+    &copy; </p>
+  <p>Referência de <a target="_blank" href="https://www.pokemon.com/us/pokedex/">Pokedex</a></p>
+</footer>
+
 </body>
 
 </html>
