--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,65 +203,25 @@ section#detalhes{
   flex-wrap: wrap;
 }
 
-section#detalhes h2{
-  align-self: center;
-  font-size: 2rem;
-  margin-bottom: .3rem;
-}
-
-section#detalhes p#detipo{
-  align-self: center;
-  margin-bottom: 3rem;
-  background-color: #54b564;
-  padding: .3rem;
-  font-size: 1rem;
-  
-}
-
-section#detalhes div#desc{
+footer{
+  padding: 2rem;
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
+  justify-content: center;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 1rem;
 }
 
-section#detalhes div#desc img{
-  background-color: #f2f2f285;
-  width: 25%;
-  border-radius: 1rem;
-  margin-right: 2rem;
-}
-
-section#detalhes div#desc div#box{
-  width: 35%;
+footer p{
+  width: 100%;
+  color: #000000;
   text-align: center;
-}
-
-section#detalhes div#desc div#box p{
-  font-weight: 400;
-  font-size: 1.3rem;
-
-}
-
-section#detalhes div#desc div#box div#atributos {
-  background-color: #30a7d7;
-  border-radius: 2rem;
-  padding: 2.5rem;
-  text-align: center;
-  margin-top: 2rem;
-
-}
-
-
-section#detalhes div#desc div#box div#atributos h3{
-  color: #ffffff;
-  font-size: 1rem;
-  font-weight: 400;
-  margin-bottom: .2rem;
-}
-
-section#detalhes div#desc div#box div#atributos p{
   font-size: 1.2rem;
-  font-weight: 600;
-  margin-bottom: .8rem;
 }
 
+footer p a{
+  text-decoration: none;
+  color: #000000;
+  font-weight: 600;
+}
