--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -2,10 +2,13 @@
 
   <section id="detalhes">
 
-    <h2>Ivysaur #2</h2>
+    <h2>Ivysaur <spam>#2</spam>
+    </h2>
+
     <p id="detipo">
       Grass
     </p>
+
     <div id="desc-content">
 
       <div id="desc-img">
