--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
   <section id="cadastro">
     <h2>Cadastre um novo Pokemon</h2>
-    <form action="/add" method="POST">
+    <form action="/new" method="POST">
       <label for="numero">Número</label>
       <input type="text" id="numero" name="numero" required>
 
