--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs') %>
   <section id="cadastro">
-    <h2>Cadastre um novo Pokemon</h2>
+    <h2>CADASTRE UM NOVO POKEMON</h2>
     <form action="/new" method="POST">
       <label for="numero">Número</label>
       <input type="text" id="numero" name="numero" required>
