--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,7 +9,7 @@
     &copy; </p>
   <p>Referência de <a target="_blank" href="https://www.pokemon.com/us/pokedex/">Pokedex</a></p>
 </footer>
-
+<script src="/js/script.js"></script>
 </body>
 
 </html>
