--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -3,7 +3,7 @@
     <h2>CADASTRE UM NOVO POKEMON</h2>
     <form action="/new" method="POST">
       <label for="numero">Número</label>
-      <input type="text" id="numero" name="numero" required>
+      <input type="number" id="numero" name="numero" required>
 
       <label for="nome">Nome</label>
       <input type="text" id="nome" name="nome" required>
@@ -12,7 +12,7 @@
       <input type="text" id="tipo" name="tipo" required>
 
       <label for="imagem">Link da imagem</label>
-      <input type="text" id="imagem" name="imagem" required>
+      <input type="url" id="imagem" name="imagem" required>
 
       <label for="descricao">Descrição</label>
       <input type="text" id="descricao" name="descricao" required>
